[package]
name = "solana-tracker"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "solana-tracker"
path = "src/main.rs"

[dependencies]
once_cell = "1.19"
serde_json = "1.0"
tokio = { version = "1.45.1", features = ["full"] }
chrono = "0.4.41"
futures-util = "0.3.31"
eventsource-client = "0.15.0"
aws-config = "1.1"
aws-sdk-s3 = "1.14"
aws-types = "1.3.7"
dotenv = "0.15.0"
